eks-devops/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
  selector:
     app: webaap
