eks-devops/kustomize/base/virtualserver.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: web-frontend
spec:
  hosts:
    - '*'
  gateways:
    - ingressgateway
  http:
    - route:
        - destination:
            host: webapp-service.default.svc.cluster.local
            port:
              number: 8080
